Creating the Team´s Controller and Service methods Save

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ballitchampionship
+
+spring.datasource.url=jdbc:h2:mem:database
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=adm
+spring.datasource.password=
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+#server.port=${ITA_PORT:8080}
+server.port=8080
