Swagger,Team,Championship and Phase classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ballitchampionship
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.datasource.url=jdbc:h2:mem:database
 spring.datasource.driverClassName=org.h2.Driver
