--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,16 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.modelmapper:modelmapper:3.2.0'
+	implementation 'org.modelmapper:modelmapper:2.3.8'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version :'3.0.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version :'2.9.2'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
+
